Fix: Remove default html size of the comments box

--- a/first-proto/day.html
+++ b/first-proto/day.html
@@ -74,7 +74,7 @@
             <div class="mood_field">
                 <h2>Comments: </h2>
                 <div class="mood_field_text">
-                    <textarea name="" id="" cols="100" rows="10"></textarea>
+                    <textarea name="mood_field_text" id="mood_field_text"></textarea>
                 </div>
             </div>
         </div>
