Refractor: Change btn_removal class to activity_remove

--- a/first-proto/day.html
+++ b/first-proto/day.html
@@ -30,7 +30,7 @@
         <div id="schedule">
             <div class="scheduled_activity">
                 <h2>XX:XX - XX:XX</h2>
-                <button class="btn_removal">
+                <button class="activity_remove">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <polyline points="3 6 5 6 21 6"></polyline>
                         <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
@@ -42,7 +42,7 @@
             </div>
             <div class="scheduled_activity">
                 <h2>XX:XX - XX:XX</h2>
-                <button class="btn_removal">
+                <button class="activity_remove">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <polyline points="3 6 5 6 21 6"></polyline>
                         <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
@@ -54,7 +54,7 @@
             </div>
             <div class="scheduled_activity">
                 <h2>XX:XX - XX:XX</h2>
-                <button class="btn_removal">
+                <button class="activity_remove">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <polyline points="3 6 5 6 21 6"></polyline>
                         <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
@@ -66,7 +66,7 @@
             </div>
             <div class="scheduled_activity">
                 <h2>XX:XX - XX:XX</h2>
-                <button class="btn_removal">
+                <button class="activity_remove">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <polyline points="3 6 5 6 21 6"></polyline>
                         <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
@@ -78,7 +78,7 @@
             </div>
             <div class="scheduled_activity">
                 <h2>XX:XX - XX:XX</h2>
-                <button class="btn_removal">
+                <button class="activity_remove">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <polyline points="3 6 5 6 21 6"></polyline>
                         <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
@@ -90,7 +90,7 @@
             </div>
             <div class="scheduled_activity">
                 <h2>XX:XX - XX:XX</h2>
-                <button class="btn_removal">
+                <button class="activity_remove">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <polyline points="3 6 5 6 21 6"></polyline>
                         <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
