--- a/first-proto/day.html
+++ b/first-proto/day.html
@@ -29,7 +29,11 @@
         </div>
         <div id="schedule">
             <div class="scheduled_activity">
-                <h2>XX:XX - XX:XX</h2>
+                <div class="time_lapse">
+                    <input class="activity_start_time" type="time" value="00:00" />
+                    <p>to</p>
+                    <input class="activity_end_time" type="time" value="00:00" />
+                </div>
                 <button class="activity_remove">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <polyline points="3 6 5 6 21 6"></polyline>
@@ -38,10 +42,14 @@
                         <line x1="14" y1="11" x2="14" y2="17"></line>
                     </svg>
                 </button>
-                <p>content</p>
-            </div>
+                <input class="activity_content" type="text" value="content" />
+            </div>            
             <div class="scheduled_activity">
-                <h2>XX:XX - XX:XX</h2>
+                <div class="time_lapse">
+                    <input class="activity_start_time" type="time" value="00:00" />
+                    <p>to</p>
+                    <input class="activity_end_time" type="time" value="00:00" />
+                </div>
                 <button class="activity_remove">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <polyline points="3 6 5 6 21 6"></polyline>
@@ -50,10 +58,14 @@
                         <line x1="14" y1="11" x2="14" y2="17"></line>
                     </svg>
                 </button>
-                <p>content</p>
-            </div>
+                <input class="activity_content" type="text" value="content" />
+            </div>           
             <div class="scheduled_activity">
-                <h2>XX:XX - XX:XX</h2>
+                <div class="time_lapse">
+                    <input class="activity_start_time" type="time" value="00:00" />
+                    <p>to</p>
+                    <input class="activity_end_time" type="time" value="00:00" />
+                </div>
                 <button class="activity_remove">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <polyline points="3 6 5 6 21 6"></polyline>
@@ -62,10 +74,14 @@
                         <line x1="14" y1="11" x2="14" y2="17"></line>
                     </svg>
                 </button>
-                <p>content</p>
-            </div>
+                <input class="activity_content" type="text" value="content" />
+            </div>      
             <div class="scheduled_activity">
-                <h2>XX:XX - XX:XX</h2>
+                <div class="time_lapse">
+                    <input class="activity_start_time" type="time" value="00:00" />
+                    <p>to</p>
+                    <input class="activity_end_time" type="time" value="00:00" />
+                </div>
                 <button class="activity_remove">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <polyline points="3 6 5 6 21 6"></polyline>
@@ -74,28 +90,14 @@
                         <line x1="14" y1="11" x2="14" y2="17"></line>
                     </svg>
                 </button>
-                <p>content</p>
+                <input class="activity_content" type="text" value="content" />
             </div>
-            <div class="scheduled_activity">
+            <div class="activity_adder">
                 <h2>XX:XX - XX:XX</h2>
-                <button class="activity_remove">
+                <button class="activity_add">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <polyline points="3 6 5 6 21 6"></polyline>
-                        <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
-                        <line x1="10" y1="11" x2="10" y2="17"></line>
-                        <line x1="14" y1="11" x2="14" y2="17"></line>
-                    </svg>
-                </button>
-                <p>content</p>
-            </div>
-            <div class="scheduled_activity">
-                <h2>XX:XX - XX:XX</h2>
-                <button class="activity_remove">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <polyline points="3 6 5 6 21 6"></polyline>
-                        <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
-                        <line x1="10" y1="11" x2="10" y2="17"></line>
-                        <line x1="14" y1="11" x2="14" y2="17"></line>
+                        <line x1="5" y1="15" x2="25" y2="15"></line>
+                        <line x1="15" y1="5" x2="15" y2="25"></line>
                     </svg>
                 </button>
                 <p>content</p>
