Refrator: Put the activities in a div (scheduled_activities)

--- a/first-proto/day.html
+++ b/first-proto/day.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <nav>
-        <a href="calendar.html">calendar</a>
-        <a href="summary.html">summary</a>
+        <a>calendar</a>
+        <a>summary</a>
         <a>account</a>
     </nav>
     <div id="day_container">
@@ -25,22 +25,24 @@
             </button>
         </div>
         <div class="schedule">
-            <div class="scheduled_activity">
-                <div class="time_lapse">
-                    <input class="activity_start_time" type="time" value="00:00" />
-                    <p>to</p>
-                    <input class="activity_end_time" type="time" value="00:00" />
-                </div>
-                <button class="activity_remove">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <polyline points="3 6 5 6 21 6"></polyline>
-                        <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
-                        <line x1="10" y1="11" x2="10" y2="17"></line>
-                        <line x1="14" y1="11" x2="14" y2="17"></line>
-                    </svg>
-                </button>
-                <div class="wrapper">
-                    <input class="activity_content" type="text" value="content" />
+            <div class="scheduled_activities">
+                <div class="scheduled_activity">
+                    <div class="time_lapse">
+                        <input class="activity_start_time" type="time" value="00:00" />
+                        <p>to</p>
+                        <input class="activity_end_time" type="time" value="00:00" />
+                    </div>
+                    <button class="activity_remove">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <polyline points="3 6 5 6 21 6"></polyline>
+                            <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
+                            <line x1="10" y1="11" x2="10" y2="17"></line>
+                            <line x1="14" y1="11" x2="14" y2="17"></line>
+                        </svg>
+                    </button>
+                    <div class="wrapper">
+                        <input class="activity_content" type="text" value="content" />
+                    </div>
                 </div>
             </div>
             <div class="activity_adder">
