--- a/first-proto/day.html
+++ b/first-proto/day.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="day.css">
+    <link rel="stylesheet" href="css/day/day.css">
     <title></title>
 </head>
 <body>
@@ -120,5 +120,6 @@
 
         </div>
     </div>
+    <script src="js/day/day.js"></script>
 </body>
 </html>
