Fix(day.html): Ortographic correction

--- a/first-proto/day.html
+++ b/first-proto/day.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="mood_field">
-                <h2>Hapiness rating: </h2>
+                <h2>Happiness rating: </h2>
                 <div class="mood_field_nb">
                     <input type="number">
                 </div>
