Feat(html/css): Add a title to the activities

--- a/first-proto/day.html
+++ b/first-proto/day.html
@@ -27,6 +27,7 @@
         <div class="schedule">
             <div class="scheduled_activities">
                 <div class="scheduled_activity">
+                    <h3>title</h3>
                     <div class="time_lapse">
                         <input class="activity_start_time" type="time" value="00:00" />
                         <p>to</p>
