Refractor(html/css): Change names to make them clearer

--- a/first-proto/day.html
+++ b/first-proto/day.html
@@ -28,12 +28,12 @@
             <div class="scheduled_activities">
                 <div class="scheduled_activity">
                     <h3>title</h3>
-                    <div class="time_lapse">
+                    <div class="time_interval">
                         <input class="activity_start_time" type="time" value="00:00" />
                         <p>to</p>
                         <input class="activity_end_time" type="time" value="00:00" />
                     </div>
-                    <button class="activity_remove">
+                    <button class="activity_remove_btn">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <polyline points="3 6 5 6 21 6"></polyline>
                             <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"></path>
