Fix(day.html): Correct day.js path

--- a/first-proto/day.html
+++ b/first-proto/day.html
@@ -121,6 +121,6 @@
 
         </div>
     </div>
-    <script src="js/day/day.js"></script>
+    <script type="module" src="js/data/day.js"></script>
 </body>
 </html>
